# OpenDeck

src-tauri/: Cargo.toml
src-tauri/src/: elgato.rs
src/components/: DeviceView.svelte
