[package]
name = "opendeck"
version = "2.12.1"
description = "Use stream controllers"
authors = ["Aman Khanna (nekename)"]
license = "GPL-3.0-or-later"
repository = "https://github.com/nekename/OpenDeck"
default-run = "opendeck"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
built = { version = "0.8", features = ["dependency-tree", "git2"] }

[dependencies]
# Large, fundamental libraries
tauri = { version = "2.10", features = ["devtools", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28"
tiny_http = "0.12"
elgato-streamdeck = { version = "0.13", default-features = false, features = ["async"] }
hidapi = "2.6"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg"] }
# Smaller utility libraries
dashmap = { version = "6.1", features = ["serde"] }
futures = "0.3"
anyhow = "1.0"
log = "0.4"
log-panics = "2.1"
open = "5.3"
tauri-plugin-log = "2.8"
tauri-plugin-cors-fetch = "4.2"
tauri-plugin-single-instance = { version = "2.4", features = ["deep-link"] }
tauri-plugin-autostart = "2.5"
tauri-plugin-dialog = "2.6"
tauri-plugin-deep-link = "2.4"
tauri-plugin-aptabase = "1.0"
serde-inline-default = "1.0"
serde_with = "3.16"
json-patch = "4.1"
os_info = "3.14"
urlencoding = "2.1"
base64 = "0.22"
reqwest = { version = "0.13", features = ["json"] }
zip = { version = "6.0", default-features = false, features = ["deflate", "zstd"] }
active-win-pos-rs = "0.10"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
semver = "1.0"
path-slash = "0.2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", rev = "c4c45d503ea115a839aae718d02f79e7c7f0f673" }
font-loader = "0.11"
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.61"

[features]
custom-protocol = ["tauri/custom-protocol"]
